NEWS

++ develop ++


++ miscset v 1.0.0 ++ 2016/01/26

updated description
fixed check errors
released to CRAN

++ miscset v 0.9.0 ++ 2016/01/14

package NAMESPACE:
function added: confint.numeric (calculate confidence intervals)
function added: ciplot (barplot with error bars)
dropped gapply (recommendation: use plyr package)
dropped m[g]sub (because of pattern-re-replacements)

other:
vignette as RMarkdown/HTML
updated travis.yml
implemented build script (using devtools)
CRAN pre-release

++ miscset v 0.6 ++ 2015/05/09

improved package vignette
added some fixes
base for new development git-branching

++ miscset v 0.5.2 ++ 2015/02/

function added: factorNA
function added: nunique
function added: uniquei
function added: do.rbind
function added: duplicated
function added: duplicatei
function added: print.gapply
function added: sort.data.frame
improved package description
bugfix textable: caption movement working
bugfix scaler: correct error message

++ miscset v 0.5.1 ++ 2015/01/21

more verbose description of package added as suggested by CRAN/Uwe Ligges
function improved: textable, with caption before table (optional)
function added: p2star
vignette: added new function and improved layout

++ miscset v 0.5 ++ 2014/12/19

function added: help.index
function added: scaler
function added: plotn
function added: ggplotGrid (will replace ggplotlist in future releases) with additional eps support
function improved: mgrepl now optionally returns integer index instead of logical vector
function improved: textable now can call system for pdf generation and optionally includes tex file header
vignette: added new functions
bugfix: suggesting and importing from ggplot2 for vignette/ggplotGrid

++ miscset v 0.4 ++ 2014/09/03

function added: ggplotlist
function added: lload
vignette added: ggplotlist and lload
vignette improved: merged chapters
file dropped: INDEX

++ miscset v 0.3.1 ++ 2014/07/11

vignette bugfix
vignette added: as.data.table.gapply
