@@ -1,11 +1,14 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(ciplot,default)
+S3method(collapse,data.frame)
+S3method(collapse,default)
 S3method(confint,numeric)
 S3method(enpaire,dist)
 S3method(enpaire,matrix)
 S3method(sort,data.frame)
 export(ciplot)
+export(collapse)
 export(do.rbind)
 export(duplicatei)
 export(duplicates)
@@ -35,6 +38,7 @@ export(strrev)
 export(textable)
 export(uniquei)
 import(Rcpp)
+import(data.table)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
