@@ -2,6 +2,7 @@ NEWS
 
 ++ develop ++
 
+function added: collapse
 
 ++ miscset v 1.0.0 ++ 2016/01/26
 
